package control

import (
	"context"
	"database/sql"

	"connectrpc.com/connect"
	pb "fleetd.sh/gen/fleetd/v1"
)

// AnalyticsService handles analytics operations
type AnalyticsService struct {
	db *sql.DB
}

// NewAnalyticsService creates a new analytics service
func NewAnalyticsService(db *sql.DB) *AnalyticsService {
	return &AnalyticsService{db: db}
}

// GetDeviceMetrics returns device metrics
func (s *AnalyticsService) GetDeviceMetrics(ctx context.Context, req *connect.Request[pb.GetDeviceMetricsRequest]) (*connect.Response[pb.GetDeviceMetricsResponse], error) {
	// Implementation will be completed when proto definitions are finalized
	return connect.NewResponse(&pb.GetDeviceMetricsResponse{}), nil
}

// GetUpdateAnalytics returns update analytics
func (s *AnalyticsService) GetUpdateAnalytics(ctx context.Context, req *connect.Request[pb.GetUpdateAnalyticsRequest]) (*connect.Response[pb.GetUpdateAnalyticsResponse], error) {
	// Implementation will be completed when proto definitions are finalized
	return connect.NewResponse(&pb.GetUpdateAnalyticsResponse{}), nil
}

// GetDeviceHealth returns device health
func (s *AnalyticsService) GetDeviceHealth(ctx context.Context, req *connect.Request[pb.GetDeviceHealthRequest]) (*connect.Response[pb.GetDeviceHealthResponse], error) {
	// Implementation will be completed when proto definitions are finalized
	return connect.NewResponse(&pb.GetDeviceHealthResponse{}), nil
}

// GetPerformanceMetrics returns performance metrics
func (s *AnalyticsService) GetPerformanceMetrics(ctx context.Context, req *connect.Request[pb.GetPerformanceMetricsRequest]) (*connect.Response[pb.GetPerformanceMetricsResponse], error) {
	// Implementation will be completed when proto definitions are finalized
	return connect.NewResponse(&pb.GetPerformanceMetricsResponse{}), nil
}

// DeploymentService handles deployment operations
type DeploymentService struct {
	db        *sql.DB
	deviceAPI *DeviceAPIClient
}

// NewDeploymentService creates a new deployment service
func NewDeploymentService(db *sql.DB, deviceAPI *DeviceAPIClient) *DeploymentService {
	return &DeploymentService{
		db:        db,
		deviceAPI: deviceAPI,
	}
}

// Deployment service methods will be implemented when proto definitions are finalized

// ConfigurationService handles configuration operations
type ConfigurationService struct {
	db *sql.DB
}

// NewConfigurationService creates a new configuration service
func NewConfigurationService(db *sql.DB) *ConfigurationService {
	return &ConfigurationService{db: db}
}

// Note: Configuration service methods will be implemented when proto definitions are available
